iptables-az.txt
# Generated by iptables-save v1.8.7 on Mon Mar  4 03:11:42 2024
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:NX-7roTexQ3fGRfU" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:qaajsWArU1ku9saf" -m mark ! --mark 0x0/0xfff00000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:N2faOPfc4DVQAfQj" -j MARK --set-xmark 0x0/0xf0000
-A cali-POSTROUTING -m comment --comment "cali:IR1ghU6yHNWsaaJF" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:fcjhvOBNywbfCkS2" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Mon Mar  4 03:11:42 2024
# Generated by iptables-save v1.8.7 on Mon Mar  4 03:11:42 2024
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [656:120468]
-A OUTPUT -d 168.63.129.16/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p tcp -m owner --uid-owner 0 -j ACCEPT
-A OUTPUT -d 168.63.129.16/32 -p tcp -m conntrack --ctstate INVALID,NEW -j DROP
COMMIT
# Completed on Mon Mar  4 03:11:42 2024
# Generated by iptables-save v1.8.7 on Mon Mar  4 03:11:42 2024
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-rpf-skip - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i azv+ -m comment --comment "cali:MsE6GPNrrkrkTjxd" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:KqDzepCQ9ET0zW4a" -m mark --mark 0x40000/0x40000 -j cali-rpf-skip
-A cali-PREROUTING -m comment --comment "cali:HUypIKdu3LeGavkj" -m mark --mark 0x40000/0x40000 -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:Czeh3duR4jhaHAZ1" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:3hdMuM039gcO-pq6" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Mon Mar  4 03:11:42 2024
# Generated by iptables-save v1.8.7 on Mon Mar  4 03:11:42 2024
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [31:15238]
:OUTPUT ACCEPT [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-IPVS-FILTER - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SOURCE-RANGES-FIREWALL - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-forward-check - [0:0]
:cali-forward-endpoint-mark - [0:0]
:cali-from-endpoint-mark - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-from-wl-dispatch-d - [0:0]
:cali-fw-azv476f0af2eb3 - [0:0]
:cali-fw-azv59e25d2aa58 - [0:0]
:cali-fw-azv66f42d11e63 - [0:0]
:cali-fw-azv79d8354dd0d - [0:0]
:cali-fw-azv8d1fccc3c2b - [0:0]
:cali-fw-azvaa6483575d0 - [0:0]
:cali-fw-azvd77f59244b1 - [0:0]
:cali-fw-azvdf67268905c - [0:0]
:cali-po-_j5sVgQTfF-APgMw0kN9 - [0:0]
:cali-po-_rWDSk9LLgWIl_lpnJE2 - [0:0]
:cali-pri-_UyohNoyKLW1AAKp8kg - [0:0]
:cali-pri-_b-WIgmNvlBH1FuEYm2 - [0:0]
:cali-pri-_euk9Rqc29XcP4g-FdM - [0:0]
:cali-pri-_w7d_5jnMyxaId_Qep- - [0:0]
:cali-pri-_wuFJilLfCnHPm8K3Ru - [0:0]
:cali-pri-_y1Xo39_WdGsJ3XS0rw - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pri-kns.wave - [0:0]
:cali-pri-ksa.wave.default - [0:0]
:cali-pro-_UyohNoyKLW1AAKp8kg - [0:0]
:cali-pro-_b-WIgmNvlBH1FuEYm2 - [0:0]
:cali-pro-_euk9Rqc29XcP4g-FdM - [0:0]
:cali-pro-_w7d_5jnMyxaId_Qep- - [0:0]
:cali-pro-_wuFJilLfCnHPm8K3Ru - [0:0]
:cali-pro-_y1Xo39_WdGsJ3XS0rw - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-pro-kns.wave - [0:0]
:cali-pro-ksa.wave.default - [0:0]
:cali-set-endpoint-mark - [0:0]
:cali-set-endpoint-mark-d - [0:0]
:cali-sm-azv476f0af2eb3 - [0:0]
:cali-sm-azv59e25d2aa58 - [0:0]
:cali-sm-azv66f42d11e63 - [0:0]
:cali-sm-azv79d8354dd0d - [0:0]
:cali-sm-azv8d1fccc3c2b - [0:0]
:cali-sm-azvaa6483575d0 - [0:0]
:cali-sm-azvd77f59244b1 - [0:0]
:cali-sm-azvdf67268905c - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-to-wl-dispatch-d - [0:0]
:cali-tw-azv476f0af2eb3 - [0:0]
:cali-tw-azv59e25d2aa58 - [0:0]
:cali-tw-azv66f42d11e63 - [0:0]
:cali-tw-azv79d8354dd0d - [0:0]
:cali-tw-azv8d1fccc3c2b - [0:0]
:cali-tw-azvaa6483575d0 - [0:0]
:cali-tw-azvd77f59244b1 - [0:0]
:cali-tw-azvdf67268905c - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m comment --comment "kubernetes ipvs access filter" -j KUBE-IPVS-FILTER
-A INPUT -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check rules" -j KUBE-NODE-PORT
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kube-proxy firewall rules" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -d 168.63.129.16/32 -p tcp -m tcp --dport 80 -j DROP
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -j KUBE-FIREWALL
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-IPVS-FILTER -m set --match-set KUBE-LOAD-BALANCER dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-CLUSTER-IP dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-EXTERNAL-IP dst,dst -j RETURN
-A KUBE-IPVS-FILTER -m set --match-set KUBE-HEALTH-CHECK-NODE-PORT dst -j RETURN
-A KUBE-IPVS-FILTER -m conntrack --ctstate NEW -m set --match-set KUBE-IPVS-IPS dst -j REJECT --reject-with icmp-port-unreachable
-A KUBE-NODE-PORT -m comment --comment "Kubernetes health check node port" -m set --match-set KUBE-HEALTH-CHECK-NODE-PORT dst -j ACCEPT
-A KUBE-SOURCE-RANGES-FIREWALL -j DROP
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i azv+ -m comment --comment "cali:eX9Ja0DwcIowMVTb" -j cali-from-wl-dispatch
-A cali-FORWARD -o azv+ -m comment --comment "cali:lCYZd5e-DzXSSbkF" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:-dcXR-VKUQwejWQO" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:t5oSTZ2L2_Tc_RfV" -j cali-cidr-block
-A cali-INPUT -m comment --comment "cali:d4znnv6_6rx6sE6M" -j MARK --set-xmark 0x0/0xfff00000
-A cali-INPUT -m comment --comment "cali:YHXh2XvaasL3jbTp" -j cali-forward-check
-A cali-INPUT -m comment --comment "cali:eL3eAQBTXQrID5PB" -m mark ! --mark 0x0/0xfff00000 -j RETURN
-A cali-INPUT -i azv+ -m comment --comment "cali:MeDHZpU40VYXaPRv" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:ErN4ZJh5t8Tu1jXx" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:VIw-oAGcs5m9oLFm" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:gQMZ1a2MO0J3yD24" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:kBNdmI9MxfiU1b1-" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:5Z67OUUpTOM7Xa1a" -m mark ! --mark 0x0/0xfff00000 -g cali-forward-endpoint-mark
-A cali-OUTPUT -o azv+ -m comment --comment "cali:NWJnBtHKNbM0-CBF" -j RETURN
-A cali-OUTPUT -m comment --comment "cali:8VoEAudsNfxl7eqf" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:8vDa2T2Diu58BXW0" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:48z36V9OQe4OW1rF" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-forward-check -m comment --comment "cali:Pbldlb4FaULvpdD8" -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A cali-forward-check -p tcp -m comment --comment "cali:ZD-6UxuUtGW-xtzg" -m comment --comment "To kubernetes NodePort service" -m multiport --dports 30000:32767 -m set --match-set cali40this-host dst -g cali-set-endpoint-mark
-A cali-forward-check -p udp -m comment --comment "cali:CbPfUajQ2bFVnDq4" -m comment --comment "To kubernetes NodePort service" -m multiport --dports 30000:32767 -m set --match-set cali40this-host dst -g cali-set-endpoint-mark
-A cali-forward-check -m comment --comment "cali:jmhU0ODogX-Zfe5g" -m comment --comment "To kubernetes service" -m set ! --match-set cali40this-host dst -j cali-set-endpoint-mark
-A cali-forward-endpoint-mark -m comment --comment "cali:O0SmFDrnm7KggWqW" -m mark ! --mark 0x100000/0xfff00000 -j cali-from-endpoint-mark
-A cali-forward-endpoint-mark -o azv+ -m comment --comment "cali:QnPR3VcqFWLmZBk1" -j cali-to-wl-dispatch
-A cali-forward-endpoint-mark -m comment --comment "cali:qi6vA17tIPvvNCnt" -j cali-to-hep-forward
-A cali-forward-endpoint-mark -m comment --comment "cali:SMUX5gEFqQiCBl1i" -j MARK --set-xmark 0x0/0xfff00000
-A cali-forward-endpoint-mark -m comment --comment "cali:naCTjGSsSlgxu7nn" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-from-endpoint-mark -m comment --comment "cali:8-U40nK07bMG5UNx" -m mark --mark 0x46000000/0xfff00000 -g cali-fw-azv476f0af2eb3
-A cali-from-endpoint-mark -m comment --comment "cali:nNc3v5N2Z4rOR4KF" -m mark --mark 0x4f100000/0xfff00000 -g cali-fw-azv59e25d2aa58
-A cali-from-endpoint-mark -m comment --comment "cali:2pCQCdgVfweDA1fj" -m mark --mark 0xc000000/0xfff00000 -g cali-fw-azv66f42d11e63
-A cali-from-endpoint-mark -m comment --comment "cali:yo1A7n2r4viedHA3" -m mark --mark 0x81600000/0xfff00000 -g cali-fw-azv79d8354dd0d
-A cali-from-endpoint-mark -m comment --comment "cali:RYu-kqZaJoASbZOa" -m mark --mark 0x7c200000/0xfff00000 -g cali-fw-azv8d1fccc3c2b
-A cali-from-endpoint-mark -m comment --comment "cali:6SLJQGu5kS5f8XW7" -m mark --mark 0xf8a00000/0xfff00000 -g cali-fw-azvaa6483575d0
-A cali-from-endpoint-mark -m comment --comment "cali:8DroUJ36ASVUwK4F" -m mark --mark 0x11900000/0xfff00000 -g cali-fw-azvd77f59244b1
-A cali-from-endpoint-mark -m comment --comment "cali:zg8ymLP4aL_6py6R" -m mark --mark 0xc3000000/0xfff00000 -g cali-fw-azvdf67268905c
-A cali-from-endpoint-mark -m comment --comment "cali:_8GhttAEIgB_riM-" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch -i azv476f0af2eb3 -m comment --comment "cali:AC5LVUCXT6K_6-OU" -g cali-fw-azv476f0af2eb3
-A cali-from-wl-dispatch -i azv59e25d2aa58 -m comment --comment "cali:v8wR4EiJOAdwCIdH" -g cali-fw-azv59e25d2aa58
-A cali-from-wl-dispatch -i azv66f42d11e63 -m comment --comment "cali:rO1nhp3hATE956j5" -g cali-fw-azv66f42d11e63
-A cali-from-wl-dispatch -i azv79d8354dd0d -m comment --comment "cali:nVh1mBam-nuqInSK" -g cali-fw-azv79d8354dd0d
-A cali-from-wl-dispatch -i azv8d1fccc3c2b -m comment --comment "cali:Pn1XUFraLBvUgg56" -g cali-fw-azv8d1fccc3c2b
-A cali-from-wl-dispatch -i azvaa6483575d0 -m comment --comment "cali:YRJADajG885rIwW9" -g cali-fw-azvaa6483575d0
-A cali-from-wl-dispatch -i azvd+ -m comment --comment "cali:z33_RnBr2Jaqrqv5" -g cali-from-wl-dispatch-d
-A cali-from-wl-dispatch -m comment --comment "cali:58LqCy9LNANVSEQM" -m comment --comment "Unknown interface" -j DROP
-A cali-from-wl-dispatch-d -i azvd77f59244b1 -m comment --comment "cali:6i6fQ6OesOq518kN" -g cali-fw-azvd77f59244b1
-A cali-from-wl-dispatch-d -i azvdf67268905c -m comment --comment "cali:bvrnOkSX8E0ZFW1x" -g cali-fw-azvdf67268905c
-A cali-from-wl-dispatch-d -m comment --comment "cali:04g7wXJit1sUuWOE" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:Ah81n1S4Dnvp6nXl" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:1lANdxGkxXwM6Yks" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:_jnHCnmmR5NNRQ89" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azv476f0af2eb3 -p udp -m comment --comment "cali:nz7SkPvFNuaNwblk" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azv476f0af2eb3 -p ipencap -m comment --comment "cali:VOpvRxktkwN3Vmqv" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:w0r5C0C9p8hOGt16" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:4iiPBEjthfXAxENf" -m mark --mark 0x0/0x20000 -j cali-po-_j5sVgQTfF-APgMw0kN9
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:L4kePoy3o6Wrx98_" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:Kke8O5GApPNZhBmP" -m mark --mark 0x0/0x20000 -j cali-po-_rWDSk9LLgWIl_lpnJE2
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:7d-clbjA1fQrgI4S" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:orcfta2POSgabJUp" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:BUmICHUtVuAxiJl1" -j cali-pro-kns.kube-system
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:203diUkXNp_oX4Hi" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:kUfr_xrHiWx_OyGj" -j cali-pro-_b-WIgmNvlBH1FuEYm2
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:C8mK8hEbQG3pf2ni" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv476f0af2eb3 -m comment --comment "cali:iOPyTwil2vqzStfK" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:AYguzeJtYw-IpiU2" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:rbD0T0W-ZnoYGBq1" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:Ga_fdLAPH4J0PWqk" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azv59e25d2aa58 -p udp -m comment --comment "cali:N9AvtmNRRx_1mkcI" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azv59e25d2aa58 -p ipencap -m comment --comment "cali:IBLQATnagy_uMjW9" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:qSTGcmAQbSICpPs2" -j cali-pro-kns.wave
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:chFlGze-ol7A9hOM" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:nMm7TDX5cuqIGDic" -j cali-pro-ksa.wave.default
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:1zEVsd5dFDNqtPA5" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv59e25d2aa58 -m comment --comment "cali:d4wrQV1q3mS9TCow" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:bzuzhN8cTLFrsHXi" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:QJtKS6iBVANJSsbg" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:x27LCD4YUydsTUm-" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azv66f42d11e63 -p udp -m comment --comment "cali:_KcpgP6jeU67Ibj3" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azv66f42d11e63 -p ipencap -m comment --comment "cali:5TCqG_qt5Lr1TMKb" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:QEgK6R1g_qDYbA6h" -j cali-pro-kns.wave
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:DG6F_LmH_rbQAsWJ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:PdU-14o-hyFWQ4iY" -j cali-pro-ksa.wave.default
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:Jq_FtuaFN8xluBW5" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv66f42d11e63 -m comment --comment "cali:fh-iBDba2MZtDEQ3" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:84OCh8BNmKm0swrD" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:ikXC6Prsewb14Lxl" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:igWa7wN0W88B2qKI" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azv79d8354dd0d -p udp -m comment --comment "cali:oTQSWfgm3c_Y1SHe" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azv79d8354dd0d -p ipencap -m comment --comment "cali:Y4NVkqA-skPRCxhe" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:f4YULVRDdgK4di30" -j cali-pro-kns.wave
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:gPDUKMTRdIAvpEAy" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:lmfFzt7BhwEcHVzY" -j cali-pro-ksa.wave.default
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:YDK_PZOQriLHtyic" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv79d8354dd0d -m comment --comment "cali:DUc6mfZiksiC1_7y" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:G2gVOc6uwNLIQkbh" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:FSHBYYZ9UWYYsuc1" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:TjUrbajZpOS5u-N-" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azv8d1fccc3c2b -p udp -m comment --comment "cali:S-7aY79XwOAUS87h" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azv8d1fccc3c2b -p ipencap -m comment --comment "cali:TJMbr9XJgWp3cVeE" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:uR-9Pe6mJZ65oRUe" -j cali-pro-_y1Xo39_WdGsJ3XS0rw
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:sxa6D3qH1v3tpgp0" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:Q21RdZYwy5h0CYm1" -j cali-pro-_UyohNoyKLW1AAKp8kg
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:C7S0FPuyjqILRVDm" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azv8d1fccc3c2b -m comment --comment "cali:ZxjIY7qRvnUzcKci" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:xaIZNMLSzMrJTXGR" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:CZ4jiHpycEWNRc7_" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:O2RYOZUxVP7upph1" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azvaa6483575d0 -p udp -m comment --comment "cali:HTgd5sO3wbAWvyLt" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azvaa6483575d0 -p ipencap -m comment --comment "cali:cXwyjeG8jFJPHWPQ" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:I5dtcE50mK4Rr3Oc" -j cali-pro-kns.wave
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:Q_Yexl9XVHiBnnUe" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:F8utUJxKcANMdeUs" -j cali-pro-_wuFJilLfCnHPm8K3Ru
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:TmcoX9cCwjlkwzJk" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azvaa6483575d0 -m comment --comment "cali:fSYWJAtPO0G984ns" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:BSC8rFt2YyBJJGLu" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:QFR0Lp9__vXndqMJ" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:_r4L5jkjgvCtXVrC" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azvd77f59244b1 -p udp -m comment --comment "cali:u0tbv0h8CFF8cdev" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azvd77f59244b1 -p ipencap -m comment --comment "cali:eOi-pgs7F9V3wdsx" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:MP6tKR0Ohq3TrA9B" -j cali-pro-kns.kube-system
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:vTQ9cGlS4HUTvWUf" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:XjwswnoHZ94u32OH" -j cali-pro-_euk9Rqc29XcP4g-FdM
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:3KgZwKIhyfmIEIZE" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azvd77f59244b1 -m comment --comment "cali:eHlxpl4g1ISl4iCm" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-azvdf67268905c -m comment --comment "cali:bIg6GNE2jXUMQGt2" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-azvdf67268905c -m comment --comment "cali:wszwxaVgJ4JrW4a0" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-azvdf67268905c -m comment --comment "cali:nAH0xMCTCpFzEiuK" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-azvdf67268905c -p udp -m comment --comment "cali:h7UoPab0SaeMqNpQ" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-azvdf67268905c -p ipencap -m comment --comment "cali:XiwXXbCkuukL_3GJ" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-azvdf67268905c -m comment --comment "cali:84nrsW-wf413mQNf" -j cali-pro-kns.kube-system
-A cali-fw-azvdf67268905c -m comment --comment "cali:CVajCCsif9yyNCy5" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azvdf67268905c -m comment --comment "cali:U8gjlqPQW9V9eSj9" -j cali-pro-_w7d_5jnMyxaId_Qep-
-A cali-fw-azvdf67268905c -m comment --comment "cali:ci03jxKhvjSYuMyS" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-azvdf67268905c -m comment --comment "cali:nflJh5C3g-jYUfNI" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-po-_j5sVgQTfF-APgMw0kN9 -m comment --comment "cali:7z6hujEGudXby9dt" -m comment --comment "Policy aaa-allow-konnectivity-agent egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-po-_j5sVgQTfF-APgMw0kN9 -m comment --comment "cali:NTwkPh-Buls_XiN8" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-po-_rWDSk9LLgWIl_lpnJE2 -m comment --comment "cali:wRBTHOraY7-PMOXd" -m comment --comment "Policy kube-system/knp.default.konnectivity-agent egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-po-_rWDSk9LLgWIl_lpnJE2 -m comment --comment "cali:K0NIAoy4j4QR-b6k" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_UyohNoyKLW1AAKp8kg -m comment --comment "cali:nOhPEAzUX4wmLgHE" -m comment --comment "Profile ksa.gatekeeper-system.gatekeeper-admin ingress" 
-A cali-pri-_b-WIgmNvlBH1FuEYm2 -m comment --comment "cali:8ILT25kWcdkY3WEJ" -m comment --comment "Profile ksa.kube-system.konnectivity-agent ingress" 
-A cali-pri-_euk9Rqc29XcP4g-FdM -m comment --comment "cali:143x6fidacMXFIzt" -m comment --comment "Profile ksa.kube-system.azure-policy ingress" 
-A cali-pri-_w7d_5jnMyxaId_Qep- -m comment --comment "cali:eWIQB71dygv3DC1e" -m comment --comment "Profile ksa.kube-system.ama-logs ingress" 
-A cali-pri-_wuFJilLfCnHPm8K3Ru -m comment --comment "cali:jpaOfT1v1oYcBbRh" -m comment --comment "Profile ksa.wave.jetski2-daemon-account ingress" 
-A cali-pri-_y1Xo39_WdGsJ3XS0rw -m comment --comment "cali:IlzJibeZKwVEUCRK" -m comment --comment "Profile kns.gatekeeper-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-_y1Xo39_WdGsJ3XS0rw -m comment --comment "cali:nOGo6DVaWxQP1-E7" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:QIB6k7eEKdIg73Jp" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.wave -m comment --comment "cali:WVp3v7hqF1F8RAQ_" -m comment --comment "Profile kns.wave ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.wave -m comment --comment "cali:I0IeLecH1zQOUqJg" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-ksa.wave.default -m comment --comment "cali:aaZfHNrMOLiFH7Y3" -m comment --comment "Profile ksa.wave.default ingress" 
-A cali-pro-_UyohNoyKLW1AAKp8kg -m comment --comment "cali:poPf7tOG1DOA90lw" -m comment --comment "Profile ksa.gatekeeper-system.gatekeeper-admin egress" 
-A cali-pro-_b-WIgmNvlBH1FuEYm2 -m comment --comment "cali:1ij2K89T3-KBfAqT" -m comment --comment "Profile ksa.kube-system.konnectivity-agent egress" 
-A cali-pro-_euk9Rqc29XcP4g-FdM -m comment --comment "cali:Q8E5LGmoNSAKkRLO" -m comment --comment "Profile ksa.kube-system.azure-policy egress" 
-A cali-pro-_w7d_5jnMyxaId_Qep- -m comment --comment "cali:P6aW7f8xxsNuP3lT" -m comment --comment "Profile ksa.kube-system.ama-logs egress" 
-A cali-pro-_wuFJilLfCnHPm8K3Ru -m comment --comment "cali:yI8BGcUiZy8OHB2l" -m comment --comment "Profile ksa.wave.jetski2-daemon-account egress" 
-A cali-pro-_y1Xo39_WdGsJ3XS0rw -m comment --comment "cali:yHkZZ1iiGeV4-b-Q" -m comment --comment "Profile kns.gatekeeper-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_y1Xo39_WdGsJ3XS0rw -m comment --comment "cali:Np-bwVQUuAyeaceQ" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:HVEEtYPJsiGRXCIt" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.wave -m comment --comment "cali:uuwbN3gRDs2ztVyV" -m comment --comment "Profile kns.wave egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.wave -m comment --comment "cali:6jE79AKIHvnHZogM" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-ksa.wave.default -m comment --comment "cali:kpPPqktrsKop-ej5" -m comment --comment "Profile ksa.wave.default egress" 
-A cali-set-endpoint-mark -i azv476f0af2eb3 -m comment --comment "cali:kkGPORmwvzkYjpjM" -g cali-sm-azv476f0af2eb3
-A cali-set-endpoint-mark -i azv59e25d2aa58 -m comment --comment "cali:G382YgWE5bqYzGGM" -g cali-sm-azv59e25d2aa58
-A cali-set-endpoint-mark -i azv66f42d11e63 -m comment --comment "cali:sGWskP3pezDR5V2v" -g cali-sm-azv66f42d11e63
-A cali-set-endpoint-mark -i azv79d8354dd0d -m comment --comment "cali:LepBe4DBRMWZZZZU" -g cali-sm-azv79d8354dd0d
-A cali-set-endpoint-mark -i azv8d1fccc3c2b -m comment --comment "cali:wQ2LBu7pAjFIbuTK" -g cali-sm-azv8d1fccc3c2b
-A cali-set-endpoint-mark -i azvaa6483575d0 -m comment --comment "cali:7V5DOyHliqJFJ-UZ" -g cali-sm-azvaa6483575d0
-A cali-set-endpoint-mark -i azvd+ -m comment --comment "cali:XnMrErXzZdtg2ZSp" -g cali-set-endpoint-mark-d
-A cali-set-endpoint-mark -i azv+ -m comment --comment "cali:b6x14t9S51H45N5c" -m comment --comment "Unknown endpoint" -j DROP
-A cali-set-endpoint-mark -m comment --comment "cali:KvX52-Z-NiUNnvhu" -m comment --comment "Non-Cali endpoint mark" -j MARK --set-xmark 0x100000/0xfff00000
-A cali-set-endpoint-mark-d -i azvd77f59244b1 -m comment --comment "cali:xKwsBYx61pcfS1ZZ" -g cali-sm-azvd77f59244b1
-A cali-set-endpoint-mark-d -i azvdf67268905c -m comment --comment "cali:BCrVSoYJMOOlfKzu" -g cali-sm-azvdf67268905c
-A cali-sm-azv476f0af2eb3 -m comment --comment "cali:rEtcBQATH9PXLyQD" -j MARK --set-xmark 0x46000000/0xfff00000
-A cali-sm-azv59e25d2aa58 -m comment --comment "cali:HWDlyeJk_w0KFiKy" -j MARK --set-xmark 0x4f100000/0xfff00000
-A cali-sm-azv66f42d11e63 -m comment --comment "cali:fzgjJF_-TC7IMnRS" -j MARK --set-xmark 0xc000000/0xfff00000
-A cali-sm-azv79d8354dd0d -m comment --comment "cali:5O6lEO_JTPuwvJDm" -j MARK --set-xmark 0x81600000/0xfff00000
-A cali-sm-azv8d1fccc3c2b -m comment --comment "cali:wQYot6asnH6QMT4v" -j MARK --set-xmark 0x7c200000/0xfff00000
-A cali-sm-azvaa6483575d0 -m comment --comment "cali:EmZL23n1qHt5q00S" -j MARK --set-xmark 0xf8a00000/0xfff00000
-A cali-sm-azvd77f59244b1 -m comment --comment "cali:ucCZXAHT1o2g7ISJ" -j MARK --set-xmark 0x11900000/0xfff00000
-A cali-sm-azvdf67268905c -m comment --comment "cali:KlYNBFSaarwU9PUS" -j MARK --set-xmark 0xc3000000/0xfff00000
-A cali-to-wl-dispatch -o azv476f0af2eb3 -m comment --comment "cali:w52NoB5-C8TI1a8I" -g cali-tw-azv476f0af2eb3
-A cali-to-wl-dispatch -o azv59e25d2aa58 -m comment --comment "cali:IRtHyoDK1btUyzvN" -g cali-tw-azv59e25d2aa58
-A cali-to-wl-dispatch -o azv66f42d11e63 -m comment --comment "cali:bZCgymltFNeRimwT" -g cali-tw-azv66f42d11e63
-A cali-to-wl-dispatch -o azv79d8354dd0d -m comment --comment "cali:6FGu-PxXftCnKwI-" -g cali-tw-azv79d8354dd0d
-A cali-to-wl-dispatch -o azv8d1fccc3c2b -m comment --comment "cali:eTwANujpIEBDe8T9" -g cali-tw-azv8d1fccc3c2b
-A cali-to-wl-dispatch -o azvaa6483575d0 -m comment --comment "cali:PCsYt8EWA2bzi-QB" -g cali-tw-azvaa6483575d0
-A cali-to-wl-dispatch -o azvd+ -m comment --comment "cali:5kPZxz8pnV6LfTET" -g cali-to-wl-dispatch-d
-A cali-to-wl-dispatch -m comment --comment "cali:gb8fVYAtyXedzSlE" -m comment --comment "Unknown interface" -j DROP
-A cali-to-wl-dispatch-d -o azvd77f59244b1 -m comment --comment "cali:WkCw2n8rDJsoG16J" -g cali-tw-azvd77f59244b1
-A cali-to-wl-dispatch-d -o azvdf67268905c -m comment --comment "cali:ZVN4G-3SYf3RyyQ-" -g cali-tw-azvdf67268905c
-A cali-to-wl-dispatch-d -m comment --comment "cali:pPJBmZyK6SGcfMLF" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:ksM799OtLlQ1WY5H" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:KHIieKcQUQeeZQph" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:0Xs3WagOUITMAqZ8" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:n0gElfUBMeCf3Rj-" -j cali-pri-kns.kube-system
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:--_xgAcEVJ6LT1Os" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:8ko3lJKTdWEv8RYg" -j cali-pri-_b-WIgmNvlBH1FuEYm2
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:hZ4eUYMCC2U7frG9" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv476f0af2eb3 -m comment --comment "cali:AQw452wFtkd3i8KX" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:aF-lHtw32PPtFIgw" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:Lcos-M4BidvworQb" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:37oNxqRoFNuVOP93" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:ncSnfZh79hIL3vH9" -j cali-pri-kns.wave
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:x9JDb5fBuxNau2YA" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:ssXc7PQDBDXjM-XU" -j cali-pri-ksa.wave.default
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:nWWfQd6emsFcTvEn" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv59e25d2aa58 -m comment --comment "cali:dD21s8VtYc0m9Sks" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:h-lCnZQLT_URpzdB" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:CaauTjf-ovHZzv5j" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:bMMRWdFm2MVHJZRX" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:8CZSgvqSYt2BDL1o" -j cali-pri-kns.wave
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:ky8cdqE3-exsEFnh" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:_P8uJ5XFufRtuoml" -j cali-pri-ksa.wave.default
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:c1TULfYnZHIedMIu" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv66f42d11e63 -m comment --comment "cali:BdGgM6SX4eC0lUfV" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:VLR4oVLmdOh7anwT" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:TQaABujb0CZSt2bV" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:lAy2hfG2JTysp3zT" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:jbPZathFwBidphIq" -j cali-pri-kns.wave
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:8iyaW-UjyKUlPBAZ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:8dr5iZ9oBFgK8PQU" -j cali-pri-ksa.wave.default
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:lgs6pVI4C8EXknfN" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv79d8354dd0d -m comment --comment "cali:Y9BMwdwD-fET_nc3" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:IMRw6oDTx6NmH9If" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:9TYqTr0Y4Wj_L4Bk" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:piXEAgCq-ynLcjj2" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:MZJI2Mcq5yfnWrhJ" -j cali-pri-_y1Xo39_WdGsJ3XS0rw
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:GXWoADVKdpIT_-X0" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:lztvL0bYilaJwqVo" -j cali-pri-_UyohNoyKLW1AAKp8kg
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:5o-yVoksD_LemCia" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azv8d1fccc3c2b -m comment --comment "cali:aX_dxvlq2ZbzORgt" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:4gOA6e2royF5CEuI" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:Ea0Pt0wA_OIkhbdA" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:V0wO3MjbKDOyXDhW" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:l-bn1TvFPDTVBXam" -j cali-pri-kns.wave
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:5GpwQTCoY5hrLEXh" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:MWvPosgKG-_tjpyg" -j cali-pri-_wuFJilLfCnHPm8K3Ru
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:rRgotOMTbuik7Coe" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azvaa6483575d0 -m comment --comment "cali:_trj99U7JwgN6wKN" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:wI1s0UDwVJYC7mZU" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:nMlX4jNJVb7dRaJo" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:_eqGXf3ngKCvjU2B" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:RrB41TeygzXAHg23" -j cali-pri-kns.kube-system
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:i4eDF_XnZlkMSG5U" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:FkyqjVu7-g_3HEQI" -j cali-pri-_euk9Rqc29XcP4g-FdM
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:kYHHPCKRG2s7eUFY" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azvd77f59244b1 -m comment --comment "cali:6b-jKLGhqMXHXGOE" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-azvdf67268905c -m comment --comment "cali:UBO2czhtdbOUYdF0" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-azvdf67268905c -m comment --comment "cali:UXMh8rAiB5TqWupU" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-azvdf67268905c -m comment --comment "cali:XsHfwFXUHPXthU57" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-azvdf67268905c -m comment --comment "cali:84FY4pT3HTGhRO8h" -j cali-pri-kns.kube-system
-A cali-tw-azvdf67268905c -m comment --comment "cali:ibLUPDj9Pk67-K_v" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azvdf67268905c -m comment --comment "cali:G5ntsMkwRiX02IJt" -j cali-pri-_w7d_5jnMyxaId_Qep-
-A cali-tw-azvdf67268905c -m comment --comment "cali:H6XC0GB1X_EVBq8Q" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-azvdf67268905c -m comment --comment "cali:RC6BIBtUEEm3AirE" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Mon Mar  4 03:11:42 2024
# Generated by iptables-save v1.8.7 on Mon Mar  4 03:11:42 2024
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:CNI-DN-b536996b35fecaa4caff4 - [0:0]
:CNI-HOSTPORT-DNAT - [0:0]
:CNI-HOSTPORT-MASQ - [0:0]
:CNI-HOSTPORT-SETMARK - [0:0]
:IP-MASQ-AGENT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-LOAD-BALANCER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODE-PORT - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SERVICES - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -s 10.224.0.157/32 -p udp -m udp --sport 9999 -j SNAT --to-source 20.225.34.72:9999
-A POSTROUTING -m comment --comment "CNI portfwd requiring masquerade" -j CNI-HOSTPORT-MASQ
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m comment --comment "\"ip-masq-agent: ensure nat POSTROUTING directs all non-LOCAL destination traffic to our custom IP-MASQ-AGENT chain\"" -m addrtype ! --dst-type LOCAL -j IP-MASQ-AGENT
-A CNI-DN-b536996b35fecaa4caff4 -s 10.224.0.0/16 -p tcp -m tcp --dport 28330 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-b536996b35fecaa4caff4 -s 127.0.0.1/32 -p tcp -m tcp --dport 28330 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-b536996b35fecaa4caff4 -p tcp -m tcp --dport 28330 -j DNAT --to-destination 10.224.0.174:28330
-A CNI-HOSTPORT-DNAT -p tcp -m comment --comment "dnat name: \"azure\" id: \"f5aed1547ebc1b30771a60373221410da4bf4a340c83569947e0174f24908d58\"" -m multiport --dports 28330 -j CNI-DN-b536996b35fecaa4caff4
-A CNI-HOSTPORT-MASQ -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A CNI-HOSTPORT-SETMARK -m comment --comment "CNI portfwd masquerade mark" -j MARK --set-xmark 0x2000/0x2000
-A IP-MASQ-AGENT -d 10.224.0.0/12 -m comment --comment "ip-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A IP-MASQ-AGENT -d 10.224.0.0/16 -m comment --comment "ip-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A IP-MASQ-AGENT -d 10.0.0.0/16 -m comment --comment "ip-masq-agent: local traffic is not subject to MASQUERADE" -j RETURN
-A IP-MASQ-AGENT -m comment --comment "ip-masq-agent: outbound traffic is subject to MASQUERADE (must be last in chain)" -j MASQUERADE
-A KUBE-LOAD-BALANCER -m comment --comment "Kubernetes service load balancer ip + port with externalTrafficPolicy=local" -m set --match-set KUBE-LOAD-BALANCER-LOCAL dst,dst -j RETURN
-A KUBE-LOAD-BALANCER -j KUBE-MARK-MASQ
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODE-PORT -p udp -m comment --comment "Kubernetes nodeport UDP port with externalTrafficPolicy=local" -m set --match-set KUBE-NODE-PORT-LOCAL-UDP dst -j RETURN
-A KUBE-NODE-PORT -p udp -m comment --comment "Kubernetes nodeport UDP port for masquerade purpose" -m set --match-set KUBE-NODE-PORT-UDP dst -j KUBE-MARK-MASQ
-A KUBE-POSTROUTING -m comment --comment "Kubernetes endpoints dst ip:port, source ip for solving hairpin purpose" -m set --match-set KUBE-LOOP-BACK dst,dst,src -j MASQUERADE
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SERVICES -s 127.0.0.0/8 -j RETURN
-A KUBE-SERVICES -m comment --comment "Kubernetes service lb portal" -m set --match-set KUBE-LOAD-BALANCER dst,dst -j KUBE-LOAD-BALANCER
-A KUBE-SERVICES ! -i azv+ -m comment --comment "Kubernetes service cluster ip + port for masquerade purpose" -m set --match-set KUBE-CLUSTER-IP dst,dst -j KUBE-MARK-MASQ
-A KUBE-SERVICES -m addrtype --dst-type LOCAL -j KUBE-NODE-PORT
-A KUBE-SERVICES -m set --match-set KUBE-CLUSTER-IP dst,dst -j ACCEPT
-A KUBE-SERVICES -m set --match-set KUBE-LOAD-BALANCER dst,dst -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
COMMIT
# Completed on Mon Mar  4 03:11:42 2024
